--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ frontend/yarn-debug.log*
 frontend/yarn-error.log*
 frontend/pnpm-debug.log*
 frontend/lerna-debug.log*
-
+frontend/.env
 frontend/node_modules
 frontend/dist
 frontend/dist-ssr
